# rebaser

./: .clangd  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Cargo.toml  LICENSE  README.md  build.rs  code.code-workspace  git-todo  qmlls.ini.in  run_qmllint.sh
qml/: main.qml
src/: cxxqt_object.rs  main.rs  rebaser.rs
src/cpp/: CMakeLists.txt  jsonmodel.cpp  jsonmodel.h
src/qml/: main.qml
